
1.0.7
-----
- Improved webmk script path detection in Django middleware.


1.0.6
-----
- Added blessc compiler for splitting large CSS files (IE 4096 selector limit).


1.0.5
-----
- Bugfixes for sass + minifyjs compilation.


1.0.4
-----
- Improved documentation.
- Fixed some npm warnings.
- Added test project.


1.0.3
-----
- Added Python 2 support.
- Added setup.py for PyPI.